rns-lang/test_data/integration_to_be_migrated/error/parser/class_directive/header/trailing_tokens/super_keyword.rns
.class HelloWorld super
.super java/lang/Object
